<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navgat.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.navgat.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.navgat.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_aboutsku"
        android:name="com.example.navgat.ui.aboutsku.AboutskuFragment"
        android:label="@string/menu_aboutsku"
        tools:layout="@layout/fragment_aboutsku" />
    <fragment
        android:id="@+id/nav_disclaimer"
        android:name="com.example.navgat.ui.Disclaimer.DisclaimerFragment"
        android:label="@string/menu_disclaimer"
        tools:layout="@layout/fragment_disclaimer" />


</navigation>